# physicsx-takehome

./: README.md
mle_libraries_take-home/: .gitignore  README.md  environment.yml  pyproject.toml
mle_libraries_take-home/data/chair/: chair_0001.ply  chair_0002.ply  chair_0003.ply  chair_0004.ply  chair_0005.ply  chair_0006.ply  chair_0007.ply  chair_0008.ply  chair_0009.ply  chair_0010.ply  chair_0011.ply  chair_0012.ply  chair_0013.ply  chair_0014.ply  chair_0015.ply  chair_0016.ply  chair_0017.ply  chair_0018.ply  chair_0019.ply  chair_0020.ply  chair_0021.ply  chair_0022.ply  chair_0023.ply  chair_0024.ply  chair_0025.ply  chair_0026.ply  chair_0027.ply  chair_0028.ply  chair_0029.ply  chair_0030.ply  chair_0031.ply  chair_0032.ply  chair_0033.ply  chair_0034.ply  chair_0035.ply  chair_0036.ply  chair_0037.ply  chair_0038.ply  chair_0039.ply  chair_0040.ply  (+949 more)
mle_libraries_take-home/data/table/: table_0001.ply  table_0002.ply  table_0003.ply  table_0004.ply  table_0005.ply  table_0006.ply  table_0007.ply  table_0008.ply  table_0009.ply  table_0010.ply  table_0011.ply  table_0012.ply  table_0013.ply  table_0014.ply  table_0015.ply  table_0016.ply  table_0017.ply  table_0018.ply  table_0019.ply  table_0020.ply  table_0021.ply  table_0022.ply  table_0023.ply  table_0024.ply  table_0025.ply  table_0026.ply  (+466 more)
mle_libraries_take-home/examples/: exploratory_data_analysis.ipynb  train_and_run_model.ipynb
mle_libraries_take-home/pclib/: __init__.py  inference.py  training.py  visualization.py
mle_libraries_take-home/tests/: test_inference.py  test_training.py
(+5 files in other folders)
